--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <td><button class="op" onclick="op('+')">+</button></td>
                 </tr> 
                 <tr>              
-                    <td colspan="2"><button class="num zero" style="width: 100%; border-radius: 25px;" onclick="numbers('0')">0</button></td>
+                    <td colspan="2"><button class="num" style="width: 100%; border-radius: 25px;" onclick="numbers('0')">0</button></td>
                     <td><button class="num" onclick="numbers('.')">.</button></td>
                     <td><button class="op" onclick="op('=')">=</button></td>
                 </tr> 
